RESOLVED FIXED 156623
[css-grid] Fix alignment with content distribution
https://bugs.webkit.org/show_bug.cgi?id=156623
Summary [css-grid] Fix alignment with content distribution
Manuel Rego Casasnovas
Reported 2016-04-15 01:11:21 PDT
If we use content distribution (with "space-around" and that kind of values) and we align one item with "center" and/or "end". The item uses the space added by the content distribution, but it shouldn't use it. For gaps this is working as expected. This is a port of this Blink patch: https://codereview.chromium.org/1880393005/ The patch has been developed on top of patch for bug #156597, which adds m_offsetBetweenColumns|Rows properties.
Attachments
Patch (65.55 KB, patch)
2016-04-15 01:17 PDT, Manuel Rego Casasnovas
no flags
Patch (65.66 KB, patch)
2016-04-18 02:23 PDT, Manuel Rego Casasnovas
no flags
Patch (65.51 KB, patch)
2016-04-28 01:01 PDT, Manuel Rego Casasnovas
no flags
Manuel Rego Casasnovas
Comment 1 2016-04-15 01:17:28 PDT
Manuel Rego Casasnovas
Comment 2 2016-04-18 02:23:09 PDT
Created attachment 276624 [details] Patch Rebased patch
Sergio Villar Senin
Comment 3 2016-04-28 00:19:02 PDT
Comment on attachment 276624 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=276624&action=review > Source/WebCore/rendering/RenderGrid.cpp:1914 > + } Being just two and taking into account that you have a comment just above I'll just do endOfRow -= gutters + m_offset > Source/WebCore/rendering/RenderGrid.cpp:1948 > + } Ditto.
Manuel Rego Casasnovas
Comment 4 2016-04-28 01:01:07 PDT
Manuel Rego Casasnovas
Comment 5 2016-04-28 01:05:32 PDT
Comment on attachment 277603 [details] Patch Thanks for the review. Applied suggested changes.
WebKit Commit Bot
Comment 6 2016-04-28 01:54:06 PDT
Comment on attachment 277603 [details] Patch Clearing flags on attachment: 277603 Committed r200181: <http://trac.webkit.org/changeset/200181>
WebKit Commit Bot
Comment 7 2016-04-28 01:54:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.