[css-grid] Fix alignment with content distribution https://bugs.webkit.org/show_bug.cgi?id=156623

Reviewed by Sergio Villar Senin.

Source/WebCore:

We were only subtracting the distribution offset for items spanning
several tracks, but not for items in a single cell.
We should actually subtract the offset in that situation too,
the same that we do for the grid gaps.

Test: fast/css-grid-layout/grid-content-alignment-and-self-alignment-spanning.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::columnAxisOffsetForChild): Subtract distribution
offset like we do for gaps.
(WebCore::RenderGrid::rowAxisOffsetForChild): Ditto.

LayoutTests:

Created new test and renamed the old one as it was only testing
items spanning several cells.

* fast/css-grid-layout/grid-content-alignment-and-self-alignment-expected.txt:
* fast/css-grid-layout/grid-content-alignment-and-self-alignment-spanning-expected.txt:
Renamed from fast/css-grid-layout/grid-content-alignment-and-self-alignment-expected.txt.
* fast/css-grid-layout/grid-content-alignment-and-self-alignment-spanning.html:
Renamed from fast/css-grid-layout/grid-content-alignment-and-self-alignment.html.
* fast/css-grid-layout/grid-content-alignment-and-self-alignment.html:


Canonical link: https://commits.webkit.org/175228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200181 268f45cc-cd09-0410-ab3c-d52691b4dbfc